--- a/src/main/resources/Config.properties
+++ b/src/main/resources/Config.properties
@@ -1,6 +1,6 @@
 Browser = Chrome
 Url = https://coditas-clap.coditas.org/login
 EmailId = akshay.patil@coditas.com
-Password = Aknewcas@9960
+Password = ############
 UserName = Akshay Patil
 UserDesignation = SDET
