selector fixes, Before class annotations added in Test classes

--- a/src/main/resources/Config.properties
+++ b/src/main/resources/Config.properties
@@ -1,6 +1,6 @@
 Browser = Chrome
 Url = https://coditas-clap.coditas.org/login
 EmailId = akshay.patil@coditas.com
-Password = ############
+Password = Aknewcas@9960
 UserName = Akshay Patil
 UserDesignation = SDET
